_old/compiler/src/test/resources/errors/syntax_error.jd
justification syntax_error {

    evidence Su1 is "Evidence 1
    conclusion C is "Conclusion 1" // Missing closing quote for Su1
}
